<resources>
    <string name="app_name">Jaldee Scale</string>
    <string name="url">https://www.jaldee.com/v1/rest/</string>
    <string name="url_terms">https://www.jaldee.com/terms</string>
    <string name="url_privacy">https://www.jaldee.com/#/privacy</string>

    <string name="support_mail">support@jaldee.com</string>
    <string name="support_number_1">8880125000</string>
    <string name="support_number_2">0487-2325650</string>
    <string name="whatsapp_number">7306823011</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Exit</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="location_unknown">Location unknown</string>
    <string name="launch_activity">Launch Jaldee</string>
    <string name="layout_button_ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="hint_mobile">Enter your mobile number</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_firstname">First Name</string>
    <string name="signup">SignUp</string>
    <string name="hint_pwd">New Password</string>
    <string name="cc_dc">Credit Card/Debit Card/Net Banking</string>
    <string name="hint_conf_pwd">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="hint_otp">Enter Otp Received</string>
    <string name="working_hours">Working\nHours</string>
    <string name="first_coupon">Sign Up\nCoupon</string>
    <string name="change"><u>Change</u></string>
    <string name="contact_information"><u>Contact Information</u></string>

    <!--Error dialog-->
    <string name="location_updated">Jaldee running in background</string>
    <string name="dialog_no_network_text">Please check your internet connection</string>
    <string name="dialog_time_out_text">Sorry,failed to establish a connection to the server</string>
    <string name="dialog_server_down_text">Error connecting to server. Please try again</string>
    <string name="alertdialog_title_error">Error</string>
    <string name="dialog_log_in" />
    <string name="agree_policy">I Agree Terms of Service  and Privacy Policy</string>
    <string name="btnlogin">Login</string>
    <string name="send">Send</string>
    <string name="attach">Attachment</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="err_msg_phone">Phone number should have 10 digits</string>
    <string name="err_msg_password">Confirm Password</string>
    <string name="err_pwd_valid">Must have atleast one uppercase letter,atleast one number and min 8 characters</string>
    <string name="tab1">Home</string>
    <string name="tab2">Jaldee</string>
    <string name="tab3">Favourites</string>
    <string name="tab4">Inbox</string>
    <string name="tab5">Account</string>
    <string name="phonenumber">Phone Number</string>
    <string name="new_phonenumber">Enter new Mobile#</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="updateprofile">Update Profile</string>
    <string name="member">Friends and Family</string>
    <string name="changepwd">Change Password</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePh">Change Phone Number</string>
    <string name="contactus">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="sendappfeed">Send app Feedback</string>
    <string name="shareynw">Share Jaldee</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termofuse">Terms of use</string>
    <string name="logout">Logout</string>
    <!--        db                   -->
    <string name="db_name">Jaldee_db</string>
    <string name="db_version">27</string>

    <string name="db_table_userinfo">USERINFO_TB</string>
    <string name="db_table_inbox">table_inbox</string>
    <string name="db_table_popularsearch">POPULARSEARCH_TB</string>
    <string name="db_table_domain">DOMAIN_TB</string>
    <string name="db_table_subdomain">TB_SUBDOMAIN</string>
    <string name="db_table_cart">tb_cart</string>


    <string name="mobile">Phone Number</string>
    <string name="updatepf">Update Profile</string>
    <string name="search_hint">Search...</string>
    <string name="diff_date">Do you want to Check-in for another day?</string>
    <string name="welcome">Welcome to</string>
    <string name="ynw">Jaldee</string>
    <string name="consumer">Consumer App</string>
    <string name="terms_cond_register1"> By  Signing up, you agree to the </string>
    <string name="terms_cond_register3"> By clicking OK, you agree to the </string>
    <string name="terms_cond_register2">Jaldee <font color='#00AEF2'><b>Terms and Conditions</b></font></string>
    <string name="are_provider1"> Are you a <b>Service Provider?</b> </string>
    <string name="now"> <b>Now</b> </string>


    <string name="are_provider2">Download the <font color='#00AEF2'><b>Jaldee for Business App</b> </font></string>
    <string name="ynw_account">You have a Jaldee Account</string>
    <string name="password_logintxt">Please enter Password to Login</string>
    <string name="pls_enterotp">to proceed!</string>
    <string name="hint_otp_pwd">Enter OTP Received</string>
    <string name="changepwd_bold">Change <font color='#3E4A59'> Password</font></string>
    <string name="new_ynw">New on Jaldee?</string>
    <string name="creteaccount">Create Your Account</string>
    <string name="emailtitle">We will send OTP via Email</string>
    <string name="searchhint">Search for Doctors, Salons...</string>
    <string name="activecheckin">Active Check-in</string>
    <string name="typecity">Type a City or neighborhood...</string>
    <string name="selectservice">Service</string>
    <string name="selectDepartment">Department</string>


    <string name="permission_alert_dialog_title">Requesting SMS permission</string>
    <string name="permission_dialog_message">The app will now request your permission to send and read SMS related services.</string>

    <string name="error_invalid_phone_number">InvaFlid phone number</string>
    <string name="cancel">Cancel</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="popularsearch">Popular Searches</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="changemem">Change Member</string>
    <string name="addnote">Add Note</string>
    <string name="currentloc">Use current location</string>
    <string name="hint_message">Type your message here</string>
    <string name="searchhint_loc">Eg: Majestic, Bengaluru, Karnataka</string>
    <string name="customer">Customer</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="bill">Bill #</string>
    <string name="GSTIN">GSTIN</string>
    <string name="amount">Amount</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax 10% of 13500</string>
    <string name="amt_pay">Amount Paid</string>
    <string name="cancelcheckin">Cancel Check-In</string>
    <string name="pay">PAY</string>
    <string name="aboutus">About Jaldee</string>
    <string name="address">Jaldee Soft</string>
    <string name="rate">RATE</string>
    <string name="save">Save</string>
    <string name="clickhere">Click here to view More Details</string>
    <string name="eduqualif">Educational Qualification</string>
    <string name="experience">Experience</string>
    <string name="awards"><![CDATA[Awards & Recognitions]]></string>
    <string name="call_permission_denied_message">Call permission denied</string>
    <string name="db_table_checkin">tb_checkin</string>
    <string name="db_table_fav">tb_favour</string>
    <string name="db_table_mycheckin">tb_mycheckin</string>
    <string name="db_table_mfavID">tb_favID</string>
    <string name="db_table_address">tb_address</string>
    <string name="serve_prepay">Payment required now to complete booking </string>
    <string name="serve_pay">Consultation Amount </string>
    <string name="ordr_prepay">Advance payment </string>

    <string name="terms"><![CDATA[T & C]]></string>
    <string name="err_pwd_valid_login">Invalid password</string>
    <string name="tab6">Appointment</string>
    <string name="gold_loan_branch"><u>Vehicle Loan @doorstep</u></string>
    <string name="gold_loan_doorstep"><u>Gold loan @doorstep</u></string>
    <string name="gold_loan_doorsteps"><u>Corporate Fin...</u></string>
    <string name="couponss">Coupons</string>
    <string name="firstcouponss">Sign Up Coupons</string>
    <string name="department_name">Departments</string>
    <string name="distance"><![CDATA[( <1 km  )]]></string>
    <string name="signup_coupon">Sign Up Coupon</string>

    <string name="donation_quote">\"Remember that the happiest people are not those getting more, but those Giving more\"</string>

    <string name="cancelation_policy_2">Consumers can cancel the VARIABLE anytime</string>
    <string name="cancelation_policy_3">If the consumer cancels the VARIABLE, 3% will be deducted from the amount(which includes Jaldee service charges and Online Gateway fees).</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_attach_files">AttachFiles</string>
    <string name="jdnDetails">JDN Info</string>
    <string name="jdn">JDN</string>
    <string name="make_sure_you_never_miss_your_turn">Make sure you never miss your turn ! Let your provider know your arrival time</string>
    <string name="_09_15_09_45_am">Earliest available \n 09:15 - 09:45 AM</string>


    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>

    <string name="type_to_search">Type to Search</string>
    <string name="string_item_name">Item Name</string>
    <string name="not_found">Not Found!</string>
    <string name="please_upload_file">Please upload file</string>

    <!--JaldeeWalletActivity-->
    <string name="my_wallet">My Wallet</string>
    <string name="pls_selct_ur_jaldee_wallet">Please select your jaldee wallet</string>
    <string name="jaldee_cash">Jaldee Cash</string>
    <string name="jaldee_cash_balance">Jaldee Cash balance</string>
    <string name="jcash_total_trnsctns">Total Transactions</string>
    <string name="jCash_expired_text"><u>Expired cash</u></string>
    <string name="change_mobile"><u>change mobile #</u></string>


</resources>
