<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/selected_home"
        android:title="@string/tab1"
        app:showAsAction="always|withText"
      />
    <item
        android:id="@+id/action_checkin"
        android:checked="false"
        android:icon="@drawable/selected_checkin"
        android:title="@string/tab2"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_fav"
        android:checked="false"
        android:icon="@drawable/selected_fav"
        android:title="@string/tab3"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_inbox"
        android:checked="false"
        android:icon="@drawable/select_inbox"
        android:title="@string/tab4"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_profile"
        android:checked="false"
        android:icon="@drawable/select_profile"
        android:title="@string/tab5"
        app:showAsAction="always|withText"
        />
</menu>