<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_gradient">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/mLayout_main"
        android:layout_width="match_parent"
        android:layout_weight="2.3"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding15"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtwelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_title_large" />

        <TextView
            android:id="@+id/txtynw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtwelcome"
            android:layout_marginTop="@dimen/padding2"
            android:gravity="center"
            android:text="@string/ynw"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_title_large" />

        <TextView
            android:id="@+id/txtcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtynw"
            android:layout_marginTop="@dimen/padding2"
            android:gravity="center"
            android:text="@string/consumer"
            android:textAllCaps="true"
            android:textColor="@color/title_consu"
            android:textSize="@dimen/txtsize_title_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="0dp"
        android:layout_below="@+id/mLayout_main"
        android:layout_marginLeft="@dimen/padding40"
        android:layout_marginRight="@dimen/padding40"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/title_grey"
            android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editmobno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edittxt_line"
                android:hint="@string/hint_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textAppearance="@style/GreyTextInputLayoutHint"
                android:textColor="@color/title_grey" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/reg_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding5"
            android:background="@drawable/button_gradient"
            android:onClick="BtnSubmit"
            android:text="@string/layout_button_ok"
            android:textAllCaps="true"
            android:textColor="@color/app_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding20"
            android:layout_marginRight="@dimen/padding20"
            android:layout_marginTop="@dimen/default_padding"
            android:gravity="center"
            android:text="@string/terms_cond_register1"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_12" />

        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/terms_cond_register2"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_12" />

        <TextView
            android:id="@+id/txtProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding20"
            android:layout_marginRight="@dimen/padding20"
            android:layout_marginTop="@dimen/padding20"
            android:gravity="center"
            android:text="@string/are_provider1"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_hint" />

        <TextView
            android:id="@+id/txt_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/are_provider2"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_hint" />

    </LinearLayout>
</LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottomgraphics" />
</RelativeLayout>