<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/custom_toolbar" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_ynw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding20"
            android:gravity="center"
            android:text="@string/ynw"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_title"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding30"
            android:gravity="center"
            android:text="@string/changepwd_bold"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/txtsize_title" />

        <ImageView
            android:id="@+id/img_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding30"
            android:src="@drawable/indicator_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding50"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/title_grey"
                android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding5"
                    android:hint="@string/hint_pwd"
                    android:textAppearance="@style/GreyTextInputLayoutHint"
                    android:textColor="@color/title_grey"
                    android:textColorHint="@color/title_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/title_grey"
                android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editconfirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding5"
                    android:hint="@string/hint_conf_pwd"
                    android:textAppearance="@style/GreyTextInputLayoutHint"
                    android:textColor="@color/title_grey"
                    android:textColorHint="@color/title_grey" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/pwd_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@drawable/button_gradient"
                android:text="@string/changepwd"
                android:textColor="@color/app_background" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottomgraphics" />
</RelativeLayout>