<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/special_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding7"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.jaldeeinc.jaldee.custom.CustomTextViewBold
                android:id="@+id/txt_ynw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ynw"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/title_grey"
                android:textSize="20dp" />

            <com.jaldeeinc.jaldee.custom.CustomTextViewSemiBold
                android:id="@+id/txt_needynw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding15"
                android:gravity="center"
                android:text="@string/new_ynw"
                android:textColor="@color/title_grey"
                android:textColorHint="@color/title_grey"
                android:textSize="@dimen/txtsize_subtitle" />

            <com.jaldeeinc.jaldee.custom.CustomTextViewSemiBold
                android:id="@+id/txtcreate_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding2"
                android:gravity="center"
                android:text="@string/creteaccount"
                android:textColor="@color/title_grey"
                android:textColorHint="@color/title_grey"
                android:textSize="@dimen/txtsize_subtitle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding15"
                android.support.design:tint="@color/dark_blue"
                android:src="@drawable/indicator_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLayout_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding40"
                android:layout_marginTop="@dimen/padding7"
                android:layout_marginRight="@dimen/padding40"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColorHint="@color/title_grey"
                    android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/hint_firstname"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/GreyTextInputLayoutHint"
                        android:textColor="@color/title_grey"
                        android:textColorHint="@color/title_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/title_grey"
                    android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/hint_lastname"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/GreyTextInputLayoutHint"
                        android:textColor="@color/title_grey"
                        android:textColorHint="@color/title_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/title_grey"
                    android:visibility="gone"
                    android.support.design:hintTextAppearance="@style/GreyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/GreyTextInputLayoutHint"
                        android:textColor="@color/title_grey"
                        android:textColorHint="@color/title_grey"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_signup"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding5"
                    android:background="@drawable/button_gradient"
                    android:backgroundTint="@color/dark_blue"
                    android:onClick="BtnSignUp"
                    android:text="@string/signup"
                    android:textColor="@color/app_background" />

                <com.jaldeeinc.jaldee.custom.CustomTextViewMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding20"
                    android:layout_marginTop="@dimen/padding5"
                    android:layout_marginRight="@dimen/padding20"
                    android:gravity="center"
                    android:text="@string/terms_cond_register1"
                    android:textColor="@color/title_grey"
                    android:textSize="@dimen/txtsize_title_term_small" />

                <com.jaldeeinc.jaldee.custom.CustomTextViewSemiBold
                    android:id="@+id/txt_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/terms_cond_register2"
                    android:textColor="@color/title_grey"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottomgraphics" />
</RelativeLayout>